Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111290

(qdoc) warning: Undocumented parameters in TableView::positionViewAtIndex()

    XMLWordPrintable

Details

    • 17e9d4480 (dev), e595831e7 (6.5)

    Description

      This blocks CI:

      https://codereview.qt-project.org/c/qt/qtdeclarative/+/460941/1#message-c0a1142f945e5eff489bbf584264233088765dbb

      agent:2023/02/20 03:39:45 build.go:403: /home/qt/work/qt/qtdeclarative/src/quick/items/qquicktableview.cpp:803: (qdoc) warning: Undocumented parameter 'mode' in TableView::positionViewAtIndex()
      agent:2023/02/20 03:39:45 build.go:403: /home/qt/work/qt/qtdeclarative/src/quick/items/qquicktableview.cpp:803: (qdoc) warning: Undocumented parameter 'index' in TableView::positionViewAtIndex()
      agent:2023/02/20 03:39:45 build.go:403: /home/qt/work/qt/qtdeclarative/src/quick/items/qquicktableview.cpp:803: (qdoc) warning: Undocumented parameter 'subRect' in TableView::positionViewAtIndex()
      agent:2023/02/20 03:39:45 build.go:403: /home/qt/work/qt/qtdeclarative/src/quick/items/qquicktableview.cpp:803: (qdoc) warning: Undocumented parameter 'offset' in TableView::positionViewAtIndex()
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            richard Richard Moe Gustavsen
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes