Doc: Fix warnings for undocumented parameters

Fix undocumented parameters for TableView::positionViewAtIndex(),
and increase the warning limit by one to address another
warning that exists only on the dev branch.

Pick-to: 6.5
Fixes: QTBUG-111290
Task-number: QTBUG-111289
Change-Id: I1da384a082163f1fd7fa9dbfa1e2afc3793d5c88
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>